--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.15.0"
+    "astro": "^4.15.0",
+    "liquidjs": "^10.21.1",
+    "openai": "^5.23.1"
   },
   "devDependencies": {
     "@astrojs/check": "^0.9.0",
