--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "ajv": "^8.17.1",
+    "ajv-formats": "^3.0.1",
     "astro": "^4.15.0",
     "liquidjs": "^10.21.1",
     "openai": "^5.23.1"
