--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/cloudflare": "^12.6.9",
     "ajv": "^8.17.1",
     "ajv-formats": "^3.0.1",
     "astro": "^5.7.0",
