--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
+    "prebuild": "node scripts/compile-schema.js",
     "build": "astro check && astro build",
     "preview": "astro preview",
     "astro": "astro"
@@ -20,6 +21,7 @@
   "devDependencies": {
     "@astrojs/check": "^0.9.0",
     "@types/node": "^24.5.2",
+    "ajv-cli": "^5.0.0",
     "typescript": "^5.5.0"
   }
 }
