--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "devDependencies": {
     "@astrojs/check": "^0.9.0",
+    "@azure/static-web-apps-cli": "^2.0.7",
     "@types/node": "^24.5.2",
     "ajv-cli": "^5.0.0",
     "typescript": "^5.5.0"
