--- a/api/package.json
+++ b/api/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "type": "module",
   "dependencies": {
+    "@azure/identity": "^4.13.0",
     "ajv": "^8.17.1",
     "ajv-formats": "^3.0.1",
     "liquidjs": "^10.21.1",
