--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@astrojs/node": "^9.1.1",
+    "@azure/identity": "^4.13.0",
     "ajv": "^8.17.1",
     "ajv-formats": "^3.0.1",
     "astro": "^5.7.0",
